--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Laravel\\Installer\\Console\\": "src/"
+            "Laravel\\Installer\\": "src/"
         }
     },
     "replace": {
@@ -26,7 +26,10 @@
         "guzzlehttp/guzzle": "~6.0",
         "symfony/console": "~3.0|~4.0",
         "symfony/filesystem": "~3.0|~4.0",
-        "symfony/process": "~3.0|~4.0"
+        "symfony/process": "~3.0|~4.0",
+        "composer/semver": "^1.5",
+        "symfony/stopwatch": "^4.3",
+        "zendframework/zend-text": "^2.7"
     },
     "bin": [
         "laravel"
