--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     "require": {
         "ext-zip": "*",
         "guzzlehttp/guzzle": "~6.0",
-        "symfony/console": "~3.0|~4.0",
-        "symfony/filesystem": "~3.0|~4.0",
-        "symfony/process": "~3.0|~4.0",
+        "symfony/console": "~3.0|~4.0|~5.0",
+        "symfony/filesystem": "~3.0|~4.0|~5.0",
+        "symfony/process": "~3.0|~4.0|~5.0",
         "composer/semver": "^1.5"
     },
     "require-dev": {
