--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "Alternative Laravel Application Installer",
     "keywords": ["laravel", "installer"],
     "license": "MIT",
-    "authors": [
-        {
+    "authors": [{
             "name": "Taylor Otwell",
             "email": "taylorotwell@gmail.com"
         },
@@ -15,11 +14,11 @@
     ],
     "require": {
         "ext-zip": "*",
+        "composer/semver": "^1.5",
         "guzzlehttp/guzzle": "~6.0",
         "symfony/console": "~3.0|~4.0|~5.0",
         "symfony/filesystem": "~3.0|~4.0|~5.0",
-        "symfony/process": "~3.0|~4.0|~5.0",
-        "composer/semver": "^1.5"
+        "symfony/process": "~3.0|~4.0|~5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0"
